--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ rvm:
   - rbx-18mode
   - rbx-19mode # currently in active development, may or may not work for your project
 before_install: gem install bones simplecov avl_tree
+notifications:
+  recipients:
+    - liebler.dominik@googlemail.com
