changed email for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ rvm:
 before_install: gem install bones simplecov avl_tree
 notifications:
   recipients:
-    - liebler.dominik@googlemail.com
+    - liebler.dominik@gmail.com
