--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: ruby
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx-18mode
-  - rbx-19mode # currently in active development, may or may not work for your project
+  - 2.2.9
+  - 2.5.1
+  - 2.4.4
+  - jruby-head
 before_install: gem install bones simplecov avl_tree
 notifications:
   recipients:
